Mode switching hides vertices in Edit mode (Weight paint / Sculpt mode --> Edit mode) #80771

Closed
opened 2020-09-14 14:49:46 +02:00 by François BERNARD-CARDASCIA · 22 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92

Blender Version
Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: 0330d1af29
Worked: 2.83.5
Caused by 3ebe97c06b

Short description of error
Hello,
I think I found a very anoying bug here. with this mesh, as soon I go in weight paint mode, a part of my mesh is locked and become uneditable and you cannot select some vetices of the mesh in edit mode. I tried with the 2.83.5 version and it seems to work as intended with this one. the issue only comes with 2.90.0 here.

here is the .blend file: bug isolation 2.90.0.blend

Exact steps for others to reproduce the error

  • Open the attached .blend file
  • at this point all vertices are still selectable
  • enter weight paint mode
  • go back to edit mode
  • and here you end with a glitched mesh (vertices dont draw, cannot be selected, alt+ H to makes them visible again)

Exact steps for others to reproduce the error (another symptom: sculptmode to edit mode automatically hide certain vertex)

  • Create a cube,
  • Delete a face,
  • Extrude some vertex,
  • Enter in sculpt mode,
  • Enter in edit mode.
  • Extruded vertex will be hidden (alt+ H to makes them visible again)

I hope someone will find what's going on.

thank you for your time

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92 **Blender Version** Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: `0330d1af29` Worked: 2.83.5 Caused by 3ebe97c06b **Short description of error** Hello, I think I found a very anoying bug here. with this mesh, as soon I go in weight paint mode, a part of my mesh is locked and become uneditable and you cannot select some vetices of the mesh in edit mode. I tried with the 2.83.5 version and it seems to work as intended with this one. the issue only comes with 2.90.0 here. here is the .blend file: [bug isolation 2.90.0.blend](https://archive.blender.org/developer/F8878446/bug_isolation_2.90.0.blend) **Exact steps for others to reproduce the error** - Open the attached .blend file - at this point all vertices are still selectable - enter weight paint mode - go back to edit mode - and here you end with a glitched mesh (vertices dont draw, cannot be selected, alt+ H to makes them visible again) **Exact steps for others to reproduce the error (another symptom: sculptmode to edit mode automatically hide certain vertex)** - Create a cube, - Delete a face, - Extrude some vertex, - Enter in sculpt mode, - Enter in edit mode. - Extruded vertex will be hidden (alt+ H to makes them visible again) I hope someone will find what's going on. thank you for your time

Added subscriber: @PKNzeta

Added subscriber: @PKNzeta

#83491 was marked as duplicate of this issue

#83491 was marked as duplicate of this issue

#82709 was marked as duplicate of this issue

#82709 was marked as duplicate of this issue

#81319 was marked as duplicate of this issue

#81319 was marked as duplicate of this issue

#81114 was marked as duplicate of this issue

#81114 was marked as duplicate of this issue

#80801 was marked as duplicate of this issue

#80801 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Caused by 3ebe97c06b

Caused by 3ebe97c06b
Member

Added subscribers: @PabloDobarro, @Sergey

Added subscribers: @PabloDobarro, @Sergey

Yes!
Thank you Philipp, I managed to fix my problem with this manipulation:

  • go to sculpt mode
  • hit alt-H to unhide everything
  • and then all is back to normal in edit mode
    still not sure if it's a bug or a mishandling
Yes! Thank you Philipp, I managed to fix my problem with this manipulation: - go to sculpt mode - hit alt-H to unhide everything - and then all is back to normal in edit mode still not sure if it's a bug or a mishandling
Member

OK, that is good to here.

I havent investigated this further (and from quick look this doesnt seem to happen every time you hide facesets in sculptmode), so might be something specific to this file.
Will lower the prio.

OK, that is good to here. I havent investigated this further (and from quick look this doesnt seem to happen every time you hide facesets in sculptmode), so might be something specific to this file. Will lower the prio.

@PabloDobarro will you have a look here?

@PabloDobarro will you have a look here?
Philipp Oeser changed title from Weight paint mode freeze a part of the mesh in Edit mode to Mode switching hides vertices in Edit mode (Weight paint / Sculpt mode --> Edit mode) 2020-09-15 13:06:59 +02:00
Member

raised prio here again (simpler repro steps were found)

raised prio here again (simpler repro steps were found)
Member

Added subscriber: @DanieleViagi

Added subscriber: @DanieleViagi

This issue was referenced by 9743a58f7d

This issue was referenced by 9743a58f7d1f0fe8b5460a13b64bee05f66e6db6

This issue was referenced by cacd57b67a

This issue was referenced by cacd57b67a15e08bce3b1c9a136004516c593672
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-09-17 23:52:18 +02:00
Member

Added subscribers: @AndrewBrandon, @Alaska

Added subscribers: @AndrewBrandon, @Alaska
Member

Added subscriber: @Mayunak

Added subscriber: @Mayunak
Member

Added subscribers: @JJLee, @Stan_Pancakes, @iss

Added subscribers: @JJLee, @Stan_Pancakes, @iss

Added subscribers: @judochop27, @rjg

Added subscribers: @judochop27, @rjg
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80771
No description provided.